<resources>
    <string name="app_name">phoneapp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="button_mode1_text">控制模式</string>
    <string name="button_mode2_text">自由模式</string>
    <string name="button_mode3_text">循迹模式</string>
    <string name="button_up_text">↑</string>
    <string name="button_down_text">↓</string>
    <string name="button_left_text">←</string>
    <string name="button_right_text">→</string>
    <string name="button_clear_text">清空信息</string>
    <string name="switch_message_flag_text">输出信息</string>

    <string name="button_bt_connect">发送测试</string>


    <string name="devices">Bluetooth Devices</string>
    <string name="bluetooth_connect">Bluetooth Connect</string>
    <string name="bluetooth_permission_title">Bluetooth permission</string>
    <string name="bluetooth_permission_grant">Bluetooth permission is required by this App. Please grant in next dialog.</string>
    <string name="bluetooth_permission_denied">Bluetooth permission was permanently denied. You have to enable permission \"%s\" in App settings.</string>

    <string name="button_update">更新</string>

    <string name="text_title_stand">直立环参数</string>
    <string name="text_input_stand_Kp">stand_Kp</string>
    <string name="text_input_stand_Ki">stand_Ki</string>
    <string name="text_input_stand_Kd">stand_Kd</string>

    <string name="text_title_velocity">速度环参数</string>
    <string name="text_input_velocity_Kp">velocity_Kp</string>
    <string name="text_input_velocity_Ki">velocity_Ki</string>
    <string name="text_input_velocity_Kd">velocity_Kd</string>

    <string name="text_title_turn">转向环参数</string>
    <string name="text_input_turn_Kp">turn_Kp</string>
    <string name="text_input_turn_Ki">turn_Ki</string>
    <string name="text_input_turn_Kd">turn_Kd</string>

    <string name="button_listen_state">监听姿态</string>
    <string name="button_listen_distance">监听测距</string>
    <string name="button_update_setting">刷新参数</string>


</resources>

